start change for karaf 3